--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
         
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-              <a class="navbar-brand" href="#">Navbar</a>
+              <div class="logobrand">
+                <a class="navbar-brand" href="#">
+                    <h1 class="brandname">DYLAN LEE</h1>
+                    <p class="semibrand">Frontend Developer</p>
+                </a>
+              </div>
+             
 
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
